Fixed link spacing in nav bar

--- a/index.css
+++ b/index.css
@@ -69,10 +69,10 @@ nav{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: center;
 		width: 50%;
 		transform: translateX(100%);
 		transition: transform 0.5s ease-in;
+		
 	}
 	.nav-links li{
 		opacity: 0;
